# dev-swarm-autonomous-agency

./: README.md  pyproject.toml
knowledge/: user_preference.txt
src/dev_swarm/: crew.py  main.py
src/dev_swarm/config/: agents.yaml  tasks.yaml
src/dev_swarm/tools/: qa_tools.py  system_tools.py
