[project]
name = "dev_swarm"
version = "0.1.0"
description = "dev_swarm using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=1.6.1",
    "crewai[tools]==1.6.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]

[project.scripts]
dev_swarm = "dev_swarm.main:run"
run_crew = "dev_swarm.main:run"
train = "dev_swarm.main:train"
replay = "dev_swarm.main:replay"
test = "dev_swarm.main:test"
run_with_trigger = "dev_swarm.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
